--- a/templates/index.html
+++ b/templates/index.html
@@ -363,6 +363,7 @@
                 <div id="dropdown-menu">
                     <p id="username-display">User</p>
                     <a href="/account"><button style="margin-bottom: 10px;">My Account</button></a>
+                    <a href="/local-news"><button style="margin-bottom: 10px;">Local News</button></a>
                     <button onclick="logout()">Logout</button>
                 </div>
             </div>
@@ -380,7 +381,6 @@
             <option value="Entertainment">Entertainment</option>
             <option value="Health">Health</option>
             <option value="Technology">Technology</option>
-            <option value="Local">Local</option>
         </select>
     </div>
 
