--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
                 <div id="dropdown-menu">
                     <p id="username-display">User</p>
                     <a href="/account"><button style="margin-bottom: 10px;">My Account</button></a>
-                    <a href="/local-news"><button style="margin-bottom: 10px;">Local News</button></a>
+                    <a href="/news/local"><button style="margin-bottom: 10px;">Local News</button></a>
                     <button onclick="logout()">Logout</button>
                 </div>
             </div>
